Added POST creation endpoint for income book entry